tests/ui/generic-associated-types/issue-68641-check-gat-bounds.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-68641-check-gat-bounds.rs:12:21
   |
LL |     type Item<'a> = T;
   |                     ^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `UnsafeCopy::Item`
  --> $DIR/issue-68641-check-gat-bounds.rs:4:20
   |
LL |     type Item<'a>: Copy;
   |                    ^^^^ required by this bound in `UnsafeCopy::Item`
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | impl<T: std::marker::Copy> UnsafeCopy for T {
   |       +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
